# SIMple

./: .gitignore  CMakeLists.txt  conandata.yml  main.cu
examples/: generate.py  multi_body.ini  sun_earth_comet.ini
shaders/: fps_frag.glsl  fps_vert.glsl  fragment.glsl  fragment_line.glsl  vertex.glsl  vertex_line.glsl
src/: cuda_gl_bridge.cuh  loader.cu  loader.cuh  path.cu  path.cuh  stb_impl.cu
src/rendering/: camera.cu  camera.cuh  fps_counter.cu  fps_counter.cuh  gl_wrapper.cu  gl_wrapper.cuh  line.cu  line.cuh  object.cu  object.cuh  shader.cu  shader.cuh
src/simulation/: data.cuh  stepper.cu  stepper.cuh
